<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">parkme</string>

    <string name="loading">Loading</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="email">Email</string>

    <string name="app_update_text">Please upgrade your app for a better browsing experience.</string>
    <string name="app_update_failure_text">Sorry, your app failed to update. Please try again later.</string>
    <string name="app_Update" translatable="false">Flexible</string>
    <string name="reading_mode">Reading mode</string>
    <string name="share_app">Share app with…</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="msg_login">We will send you a One Time Password to verify your mobile number</string>
    <string name="code_here">CODE HERE</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="edit_number">Edit Number</string>
    <string name="mobile">Mobile</string>
    <string name="loading_please_wait">Please wait…</string>
    <string name="no_internet">No Connection</string>
    <string name="no_internet_msg">Check your internet connection once…</string>
    <string name="ok" tools:ignore="PrivateResource">OK</string>
    <string name="empty_mobile_number">Please enter your mobile number</string>
    <string name="error_occurred">Error occurred!</string>
    <string name="code_sent">Verification code has been sent.</string>
    <string name="verification_header">OTP Verification</string>
    <string name="proceed">Proceed</string>
    <string name="verification_success">Mobile number verified successfully</string>
    <string name="too_many_verify_attempts">We received too many requests from your account. Please try again after some time.</string>
    <string name="server_contact_failed">Failed to communicate with the server. Please try again.</string>
    <string name="verification_failed">Failed to verify the mobile number.</string>
    <string name="failed_to_find_user">Unable to find user data</string>
    <string name="empty_otp">OTP cannot be empty…</string>
    <string name="data_fetching_failed">Failed to retrieve data</string>
    <string name="incorrect_code">Incorrect verification code</string>
    <string name="sign_in_failed">Failed to sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_label">Continue</string>
    <string name="clear">Clear</string>
    <string name="name">Name</string>
    <string name="empty_name">Enter your name</string>
    <string name="details_missing">Please enter all the details</string>
    <string name="invalid_email">Enter valid email</string>
    <string name="registered">Registered successfully.</string>
    <string name="register_failed">Registration failed!</string>
    <string name="empty_email">Enter the email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="wallet">Wallet</string>
    <string name="card_number">Card Number</string>
    <string name="expiry">Expiry</string>
    <string name="cvv">CVV</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="close">Close</string>
    <string name="empty_card_number">Enter 16 digit card number</string>
    <string name="empty_expiry">Enter expiry date in MM/YY</string>
    <string name="empty_cvv">Enter CVV code</string>
    <string name="parkign_details">Parking Details</string>
    <string name="booking_failed">Booking failed</string>
    <string name="booking_success">Booking Successful.</string>
    <string name="name_on_card">Name on card</string>
    <string name="mmyy">MM/YY</string>
    <string name="okay">OKAY!</string>
    <string name="about">About</string>
    <string name="about_message">Parkme is developed and maintained by Conestoga Developers.</string>
    <string name="time_from">Time from</string>
    <string name="to_time">To time</string>
    <string name="to_time_error">Please choose correct time.</string>
    <string name="empty_from_time">Enter start time</string>
    <string name="empty_to_time">Enter end time</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="logout_successful">Successfully logged out.</string>
    <string name="booked_on">Booked on</string>
    <string name="booked_till">Booked till</string>
    <string name="expires_on">Expires on</string>
    <string name="back">Back</string>
    <string name="new_folder">Profile</string>
    <string name="bank_card">Bank Card</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="visa">VISA</string>
    <string name="exp">EXP:</string>
    <string name="balance">Balance:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="add_money">Add Money</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="empty_amount">Enter the amount</string>
    <string name="error_amount">Please enter correct amount</string>
    <string name="payment_failed">Payment failed.</string>
    <string name="money_added_success">Amount successfully added to your wallet.</string>
    <string name="success_profile_update">Profile successfully updated.</string>
    <string name="failure_profile_update">Profile not updated.</string>
    <string name="parking_id">Parking ID</string>
    <string name="price">Price</string>
    <string name="booking_slot">Booking Slot</string>
    <string name="insufficiant_amount">Wallet doesn\'t have sufficient amount please pay with you Debit/Credit card. You can add the balance from profile after this booking.</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="booking_cancel_success">Booking canceled successfully.</string>
    <string name="booking_cancel_failed">Booking cancellation failed.</string>
    <string name="one_hour_error">You should chose at least 1 hour to proceed</string>
    <string name="error_mobile_number_length">Mobile number should be 10 digit long.</string>
</resources>