<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/wallet"
        android:contentDescription="@string/search"
        android:icon="@drawable/ic_round_wallet_24"
        android:title="@string/wallet"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_round_person_24"
        android:title="@string/profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_round_logout_24"
        android:title="@string/logout"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/home"
        android:icon="@drawable/ic_round_home_24"
        android:title="Home"
        app:showAsAction="always" />-->

    <!--<item
        android:id="@+id/styles"
        android:icon="@drawable/ic_baseline_style_24"
        android:title="Styles"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/more"
        android:contentDescription="@string/more"
        android:icon="@drawable/ic_round_more_24"
        android:title="@string/more"
        android:visible="false"
        app:showAsAction="always" />

</menu>