<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cool"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl"
        style="@style/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationContentDescription="@string/back"
            app:navigationIcon="@drawable/ic_round_back_24"
            app:menu="@menu/menu_profile"
            app:title="@string/new_folder" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.anetos.parkme.customlib.BounceScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_normal"
            android:paddingBottom="@dimen/padding_bottom">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_name"
                style="@style/DialogSectionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/spacing_normal"
                android:text="@string/name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_email"
                style="@style/DialogSectionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/spacing_normal"
                android:text="@string/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_mobile"
                style="@style/DialogSectionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/spacing_normal"
                android:text="@string/mobile"
                tools:text="Mobile" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCode"
                    style="@style/TextInputLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="@dimen/spacing_extra_small"
                    android:background="@drawable/bg_grey_hollow_rect"
                    android:gravity="center"
                    app:ccp_defaultNameCode="CA"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="false"
                    app:ccp_textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/til_mobile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_mobile"
                    style="@style/TextInputLayout"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/countryCode"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMobile"
                        style="@style/TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        tools:hint="@string/mobile_number" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_labe_payment_option"
                style="@style/DialogSectionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/spacing_normal"
                android:text="@string/payment_methods" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl_payment_layout"
                style="@style/TabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_round_credit_card_24"
                    android:text="@string/bank_card" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_round_wallet_24"
                    android:text="@string/wallet" />
            </com.google.android.material.tabs.TabLayout>

            <include
                android:id="@+id/layout_card"
                layout="@layout/view_bank_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_normal" />

            <include
                android:id="@+id/layout_wallet"
                layout="@layout/view_wallet_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_normal"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_label_address"
                style="@style/DialogSectionItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/spacing_normal"
                android:text="@string/address"
                tools:text="Address" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAddress"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    style="@style/AddressTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address"
                    android:imeOptions="actionDone"
                    android:inputType="textPostalAddress|textMultiLine|textCapSentences"
                    android:minHeight="@dimen/dp100" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        style="@style/ExtendedFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile"
        android:text="@string/update" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>