<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/spacing_normal">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/tb"
            layout="@layout/dialog_fragment_toolbar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_label_amount"
            style="@style/DialogSectionItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/spacing_normal"
            android:text="@string/amount"
            tools:text="Amount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_amount"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_amount"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_amount"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/layout_bank_card_input"
            layout="@layout/layout_bank_card_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_okay"
            style="@style/MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_normal"
            android:paddingVertical="@dimen/spacing_normal"
            android:text="@string/okay" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>